# fused-effects-system

./: .ghci.repl  README.md  cabal.project  fused-effects-profile.cabal
fused-effects-profile/: LICENSE  README.md  fused-effects-profile.cabal
fused-effects-profile/src/Control/Carrier/Profile/: Flat.hs  Tree.hs
fused-effects-profile/src/Control/Effect/: Profile.hs
fused-effects-profile/src/Data/: Timing.hs
fused-effects-time/: README.md  fused-effects-time.cabal
fused-effects-time/src/Control/Carrier/Time/: System.hs
fused-effects-time/src/Control/Carrier/Time/System/: Specialized.hs
fused-effects-time/src/Control/Effect/: Time.hs
fused-effects-time/src/Control/Effect/Time/: System.hs
script/: ghci-flags  ghci-flags-dependencies  repl
src/Control/Carrier/Profile/: Flat.hs  Identity.hs  Time.hs  Tree.hs
src/Control/Data/: Timing.hs
src/Control/Effect/: Profile.hs
src/Data/: Timing.hs
