cabal-version:       2.2

name:                fused-effects-profile
version:             0.0.0.0
synopsis:            Profiling without recompiling, via fused-effects.
description:         Profiling for Haskell programs without recompiling, via fused-effects.
homepage:            https://github.com/fused-effects/fused-effects-profile
bug-reports:         https://github.com/fused-effects/fused-effects-profile/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2020 Rob Rix
category:            Development
extra-source-files:
  CHANGELOG.md

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.6))
    ghc-options: -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies

library
  import: common
  hs-source-dirs: src
  exposed-modules:
    Control.Effect.Profile
  build-depends:
      base >= 4.12 && < 5
    , fused-effects ^>= 1
    , text ^>= 1.2
