cabal-version:       2.2

name:                fused-effects-profile
version:             0.0.0.0
synopsis:            Profiling without recompiling, via fused-effects.
description:         Profiling for Haskell programs without recompiling, via fused-effects.
homepage:            https://github.com/fused-effects/fused-effects-profile/tree/master/fused-effects-profile
bug-reports:         https://github.com/fused-effects/fused-effects-profile/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2020 Rob Rix
category:            System
extra-source-files:
  CHANGELOG.md
  README.md

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies
  if (impl(ghc >= 8.10))
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module

library
  import: common
  hs-source-dirs: src
  exposed-modules:
    Control.Carrier.Profile.Flat
    Control.Carrier.Profile.Identity
    Control.Carrier.Profile.Tree
    Control.Effect.Profile
    Data.Timing
  build-depends:
    , base >= 4.12 && < 5
    , fused-effects ^>= 1.1
    , fused-effects-time ^>= 0
    , prettyprinter >= 1.5 && < 1.8
    , prettyprinter-ansi-terminal ^>= 1.1
    , terminal-size ^>= 0.3
    , text >= 1.2 && < 2.1
    , time >= 1.9 && < 1.14
    , transformers >= 0.4 && < 0.7
    , unordered-containers ^>= 0.2
